--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
